# VideoCaptioner

./: .gitignore  README.md  main.py  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml  sync-upstream.yml  sync.yml
app/: config.py
app/common/: config.py  signal_bus.py
app/common/__pycache__/: config.json
app/components/: DonateDialog.py  FasterWhisperSettingWidget.py  LineEditSettingCard.py  MySettingCard.py  MyVideoWidget.py  SpinBoxSettingCard.py  SubtitleSettingDialog.py  TranscriptionOutputDialog.py  TranscriptionSettingDialog.py  WhisperAPISettingWidget.py  WhisperCppSettingWidget.py  transcription_setting_card.py
app/config/: config.json
app/core/: constant.py  entities.py  task_factory.py
app/core/asr/: __init__.py  asr_data.py  base.py  bcut.py  chunked_asr.py  faster_whisper.py  jianying.py  transcribe.py  whisper_api.py  whisper_cpp.py
app/core/bk_asr/: asr_data.py  base.py  bcut.py  faster_whisper.py  jianying.py  kuaishou.py  transcribe.py  whisper_api.py  whisper_cpp.py
app/core/configs/: subtitle_config.py
app/core/llm/: README.md  __init__.py  check_llm.py  check_whisper.py  client.py  request_logger.py
app/core/optimize/: optimize.py
app/core/split/: split.py  split_by_llm.py
app/core/storage/: cache_manager.py  database.py
app/core/subtitle/: font_utils.py  rounded_renderer.py
app/core/subtitle_processor/: optimization.py  optimize.py  optimizer.py  run.py  split.py  split_by_llm.py  summarization.py  summarizer.py  translate.py
app/core/tests/: test_subtitle_processor.py
app/core/translate/: __init__.py  base.py  bing_translator.py  deeplx_translator.py  factory.py  google_translator.py  llm_translator.py  types.py
app/core/tts/: __init__.py  base.py  openai_fm.py  openai_tts.py  siliconflow.py  tts_data.py
app/core/utils/: ass_auto_wrap.py  cache.py  get_subtitle_style.py  json_repair.py  optimize_subtitles.py  platform_utils.py  subtitle_preview.py  test_opanai.py  text_utils.py  video_utils.py
app/thread/: batch_process_thread.py  file_download_thread.py  subtitle_pipeline_thread.py  subtitle_thread.py  transcript_thread.py  version_manager_thread.py  video_download_thread.py  video_info_thread.py  video_synthesis_thread.py
app/view/: batch_process_interface.py  home_interface.py  llm_logs_interface.py  log_window.py  main_window.py  setting_interface.py  subtitle_interface.py  subtitle_style_interface.py  task_creation_interface.py  transcription_interface.py  video_synthesis_interface.py
configs/: subtitle_config.py
docs/: cli.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/en/: index.md
docs/en/guide/: configuration.md  faq.md  getting-started.md  workflow.md
docs/public/: BingSiteAuth.xml  robots.txt
legacy-docs/: README_EN.md  README_JA.md  README_TW.md  about_chunk_merge.md
resource/subtitle_style/: ass-anime.json  ass-default.json  ass-vertical.json  rounded-default.json
resource/translations/: VideoCaptioner_en_US.qm  VideoCaptioner_en_US.ts  VideoCaptioner_zh_CN.ts  VideoCaptioner_zh_HK.qm  VideoCaptioner_zh_HK.ts
scripts/: run.bat  run.sh  trans-compile.sh  trans-extract.sh  translate_llm.py
skills/: SKILL.md
subtitle_processor/: optimizer.py  summarizer.py
tests/: conftest.py
tests/fixtures/: README.md
tests/fixtures/audio/: test_subtitle.srt  test_subtitle_processed.srt  zh.srt
tests/fixtures/subtitle/: sample_en_optimized.srt  sample_en_processed.srt  【字幕】ru-LLM 大模型翻译.srt  【字幕】ru.srt  【字幕】ru_processed.srt  【断句字幕】sample_en.srt
tests/test_asr/: TEST_CHUNKED_ASR_REPORT.md  TEST_GUIDE.md  test_asr_data.py  test_bcut_asr.py  test_chunk_merger.py  test_chunked_asr.py  test_chunking.py  test_hear_asr.py  test_jianying_asr.py  test_whisper_api_asr.py
tests/test_cli/: test_config.py  test_parser.py
tests/test_optimize/: test_optimize.py
tests/test_split/: test_alignment.py  test_split.py  test_split_by_llm.py  test_split_core.py  test_split_realistic.py
tests/test_subtitle/: README.md  TESTING_SUMMARY.md  test_ass_renderer.py  test_subtitle_thread.py
tests/test_thread/: conftest.py  test_subtitle_pipeline_thread.py  test_transcript_thread.py  test_video_info_thread.py  test_video_synthesis_thread.py
tests/test_translate/: test_bing_translator.py  test_cache_validation.py  test_deeplx_translator.py  test_google_translator.py  test_llm_translator.py
tests/test_tts/: README.md  test_tts_core.py  test_tts_integration.py
videocaptioner/: __main__.py  config.py
videocaptioner/cli/: __main__.py  config.py  exit_codes.py  main.py  output.py  validators.py
videocaptioner/cli/commands/: config_cmd.py  download.py  process.py  style_cmd.py  subtitle.py  synthesize.py  transcribe.py
videocaptioner/core/: constant.py  entities.py
videocaptioner/core/asr/: asr_data.py  base.py  chunk_merger.py  chunked_asr.py  faster_whisper.py  jianying.py  transcribe.py  whisper_api.py  whisper_cpp.py
videocaptioner/core/llm/: check_llm.py  check_whisper.py  client.py  request_logger.py
videocaptioner/core/optimize/: optimize.py
videocaptioner/core/prompts/: __init__.py
videocaptioner/core/split/: split.py  split_by_llm.py
videocaptioner/core/subtitle/: __init__.py  ass_renderer.py  ass_utils.py  font_utils.py  rounded_renderer.py  style_manager.py  styles.py
videocaptioner/core/translate/: __init__.py  base.py  bing_translator.py  deeplx_translator.py  factory.py  google_translator.py  llm_translator.py
videocaptioner/core/tts/: base.py  openai_fm.py  openai_tts.py  siliconflow.py  tts_data.py
videocaptioner/core/utils/: cache.py  logger.py  platform_utils.py  subprocess_helper.py  text_utils.py  video_utils.py
videocaptioner/ui/: main.py  task_factory.py
videocaptioner/ui/common/: config.py
videocaptioner/ui/components/: DonateDialog.py  EditComboBoxSettingCard.py  FasterWhisperSettingWidget.py  LanguageSettingDialog.py  LineEditSettingCard.py  MySettingCard.py  MyVideoWidget.py  SubtitleSettingDialog.py  TranscriptionOutputDialog.py  (+4 more)
(+24 files in other folders)
