[project]
name = "videocaptioner"
version = "1.3.3"
description = "AI-powered video captioning tool based on LLM"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Weifeng" }]
requires-python = ">=3.10,<3.13"
keywords = ["video", "caption", "subtitle", "asr", "llm", "translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.32.4",
    "openai>=1.97.1",
    "diskcache>=5.6.3",
    "PyQt5==5.15.11",
    "PyQt-Fluent-Widgets==1.8.4",
    "yt-dlp>=2025.7.21",
    "modelscope>=1.32.0",
    "psutil>=7.0.0",
    "json-repair>=0.49.0",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "tenacity>=8.2.0",
    "GPUtil>=1.4.0",
    "pillow>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/WEIFENG2333/VideoCaptioner"
Repository = "https://github.com/WEIFENG2333/VideoCaptioner"
Issues = "https://github.com/WEIFENG2333/VideoCaptioner/issues"

[project.scripts]
videocaptioner = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["app", "main.py"]
exclude = ["**/__pycache__", ".venv", "venv", "build", "dist", "**/node_modules"]
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
reportCallIssue = false
reportOptionalMemberAccess = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "integration: Integration tests that require external services",
    "slow: Slow running tests",
    "llm: Tests that require LLM API access",
    "translator: Tests for translation modules",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
