[project]
name = "videocaptioner"
dynamic = ["version"]
description = "AI-powered video captioning tool — ASR, subtitle optimization, translation, and synthesis"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [{ name = "Weifeng" }]
requires-python = ">=3.10,<3.13"
keywords = ["video", "caption", "subtitle", "asr", "llm", "translation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

# Base dependencies (CLI-only, no PyQt)
dependencies = [
    "requests>=2.32.4",
    "openai>=1.97.1",
    "diskcache>=5.6.3",
    "yt-dlp>=2025.7.21",
    "json-repair>=0.49.0",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "tenacity>=8.2.0",
    "pillow>=12.0.0",
    "fonttools>=4.61.1",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
gui = [
    "PyQt5==5.15.11",
    "PyQt-Fluent-Widgets==1.8.4",
    "modelscope>=1.32.0",
    "psutil>=7.0.0",
    "GPUtil>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/WEIFENG2333/VideoCaptioner"
Repository = "https://github.com/WEIFENG2333/VideoCaptioner"
Issues = "https://github.com/WEIFENG2333/VideoCaptioner/issues"

[project.scripts]
videocaptioner = "videocaptioner.cli.main:main"

# videocaptioner (no args) auto-launches GUI if [gui] extras are installed

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "videocaptioner/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "resource/fonts/",
    "docs/",
    "legacy-docs/",
    "work-dir/",
    "AppData/",
    "output/",
    "scripts/",
    "tests/",
    ".github/",
]

[tool.hatch.build.targets.wheel]
packages = ["videocaptioner"]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
override-dependencies = [
    "PyQt5-Qt5==5.15.2; sys_platform == 'win32'",
    "PyQt5-Qt5>=5.15.11; sys_platform != 'win32'",
]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    # GUI deps for development
    "PyQt5==5.15.11",
    "PyQt-Fluent-Widgets==1.8.4",
    "modelscope>=1.32.0",
    "psutil>=7.0.0",
    "GPUtil>=1.4.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["videocaptioner"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "work-dir",
    "AppData",
    "resource",
    "**/node_modules"
]
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalOperand = "warning"
reportOptionalMemberAccess = false
reportArgumentType = "warning"
reportCallIssue = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --disable-warnings"
markers = [
    "integration: Integration tests that require external services",
    "slow: Slow running tests",
    "llm: Tests that require LLM API access",
    "translator: Tests for translation modules",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
